--- a/ex52/mq005/estilos/estilos.css
+++ b/ex52/mq005/estilos/estilos.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -20,6 +23,7 @@ header{
  h1{position: relative;
     text-align: center;
     margin: auto;
+    top:-1rem;
     
 }
 
@@ -38,6 +42,7 @@ li{
     position: relative;
     background: rgb(77, 75, 75);
     cursor: pointer;
+    top:-1.5rem;
 }
 a{
     position: relative;
@@ -50,14 +55,126 @@ li:hover{
     background: rgb(157, 151, 151);
 }
 main{
-    background: black;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.323);
+
 }
 article{
-    background: white;
+    position: absolute;
+   border-radius: 10px;
     display: block;
-    width:500px;
-    height: 5px;
+    width:60vw;
+    height: 70vh;
+    background: white;
     position: relative;
     margin:auto;
-    box-shadow: 2px 2px 5px black;
+    top:.3rem;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.388), -2px -1px 3px rgba(0, 0, 0, 0.302);
+    padding: 15px;
+ 
+}
+h2{
+    font-family: Open Sans;
+    font-size: 1.9rem;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 1.3rem;
+    font-size: 1rem;
+    margin: 15px 0px;
+}
+button{
+    border: none;
+    background: transparent;
+    position: relative;
+    left:89vw;
+    cursor: pointer;
+
+
+}
+.btn-f{
+    display: block;
+    border-top: 2px solid;
+    width:30px;
+    position: relative;
+    top:2rem;
+    
+   
+}
+.btn-f::after,.btn-f::before{
+    content: '';
+    display: block;
+    border-top: 2px solid;
+    width:30px;
+   
+    margin-top: 6px;
+}
+@media(max-width:1200px){
+    article{
+        width:60vw;
+        height:80vh 
+     
+    }
+    
+
+}
+@media(max-width:1000px){
+    article{
+        width:60vw;
+        height:90vh 
+     
+    }
+    
+
+}
+
+@media(max-width:900px){
+    article{
+        width:60vw;
+        height:100vh 
+     
+    }
+    
+
+}
+@media(max-width:800px){
+    article{
+        width:60vw;
+        height:110vh 
+     
+    }
+    
+
+}
+
+
+@media(max-width:700px){
+    article{
+        width:60vw;
+        height:125vh 
+     
+    }
+    
+
+}
+@media(max-width:603px){
+    article{
+        width:60vw;
+        height:140vh 
+     
+    }
+    
+
+}
+@media(max-width:600px){
+    article{
+        width:60vw;
+        height:160vh 
+     
+    }
+    
+
 }
