--- a/ex55/style.css
+++ b/ex55/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
-
+c
 
   *,
   ::after,
