--- a/ex52/mq005/estilos/estilos.css
+++ b/ex52/mq005/estilos/estilos.css
@@ -35,7 +35,7 @@ ul{
     
 }
 li{
-    display:block;
+    
     width:85px;
     height:35px;
     border-radius: 5px;
@@ -56,15 +56,16 @@ li:hover{
 }
 main{
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
     background: rgba(0, 0, 0, 0.323);
+    background-size: cover;
 
 }
 article{
     position: absolute;
    border-radius: 10px;
     display: block;
-    width:60vw;
+    width:80vw;
     height: 70vh;
     background: white;
     position: relative;
@@ -86,6 +87,7 @@ p{
     font-size: 1rem;
     margin: 15px 0px;
 }
+
 button{
     border: none;
     background: transparent;
@@ -95,12 +97,15 @@ button{
 
 
 }
+
 .btn-f{
-    display: block;
+    display: none;
     border-top: 2px solid;
     width:30px;
     position: relative;
     top:2rem;
+    color:white;
+    
     
    
 }
@@ -109,72 +114,99 @@ button{
     display: block;
     border-top: 2px solid;
     width:30px;
-   
     margin-top: 6px;
 }
-@media(max-width:1200px){
+@media(max-width:841px){
     article{
-        width:60vw;
-        height:80vh 
-     
+         height: 90vh;
+
+    }
+    ul{
+        display: none;
+        
+        
+
     }
     
+    .btn-f{
+        position: absolute;
+        display: block;
+        top:-.9vh;
+        left:-42vw;
+        z-index: 10;
 
+    }
+   
+   
+
+
+    .cab{
+        display: block;
+        width:100vw;
+        height: 40px;
+        background: black;
+        position: absolute;
+        top:10vh;
+    }
+   
+  h1{
+    top:.5vh;
+  }
+   ul.active{
+    display:block;
+    position: relative;
+    left:44vw;
+    z-index: 1;
+    
+
+   }
+   .btn-menu.active .btn-f{
+
+    border-top: none;
+   }
+   .btn-menu.active .btn-f::after{
+    position: relative;
+    transform:  rotate(-135deg);
+    top:-6.5px;
+    transition: .3s;
+    
+
+   }
+   .btn-menu.active .btn-f::before{
+    transform:  rotate(135deg);
+    transition: .3s;
 }
-@media(max-width:1000px){
-    article{
-        width:60vw;
-        height:90vh 
-     
-    }
+   li{
+    display: flex;
+    width:150vh;
+    height:35px;
+    border-radius: 5px;
+    position: relative;
+    background: rgb(77, 75, 75);
+    cursor: pointer;
+    top:6vh;
+    left:-49vw;
+    border-bottom:2px solid rgb(85, 83, 83) ;
+    justify-content: space-between;
+    align-items: center;
     
-
+    
+   }
+   a{
+    left:50vw;
+   }
 }
-
-@media(max-width:900px){
+@media(max-width:630px){
     article{
-        width:60vw;
-        height:100vh 
-     
-    }
-    
+         height: 100vh;
 
+    }
+   
 }
-@media(max-width:800px){
+@media(max-width:541px){
     article{
-        width:60vw;
-        height:110vh 
-     
+         height: 115vh;
+
     }
-    
-
-}
-
-
-@media(max-width:700px){
-    article{
-        width:60vw;
-        height:125vh 
-     
-    }
-    
-
-}
-@media(max-width:603px){
-    article{
-        width:60vw;
-        height:140vh 
-     
-    }
-    
-
-}
-@media(max-width:600px){
-    article{
-        width:60vw;
-        height:160vh 
-     
-    }
-    
-
+   
 }
