--- a/ex60/style.css
+++ b/ex60/style.css
@@ -17,16 +17,17 @@ body,html{
 
   .banner{
     display: block;
-    width:50vw;
-    height:30vh;
+    width:60vw;
+    height:35vh;
    box-shadow:  1px 1px 5px rgba(0, 0, 0, 0.229), inset 1px 1px 3px rgba(0, 0, 0, 0.302);
-    background: white;
+    background: rgb(255, 255, 255);
     position: relative;
     align-items: center;
     justify-content: center;
-    left:30vw;
+    left:25vw;
     top:35vh;
     border-radius: 10px;
+    z-index: 1;
 }
 .banner h1{
     text-align: center;
@@ -54,6 +55,9 @@ body,html{
     font-size: 12px;
     
 }
+.banner.active{
+    background: rgb(126, 124, 124);
+}
 .modal-btn:hover{
     padding-top: 9px;
     border: 2px solid rgba(146, 245, 24, 0.295);
@@ -73,8 +77,10 @@ body,html{
     align-items: center;
     justify-content: center;
     left:30vw;
-    top:6vh;
+    top:42vh;
     border-radius: 10px;
+    z-index: 2;
+    
     
    
  }
@@ -85,6 +91,9 @@ body,html{
     margin: auto;
     top:30%;
 
+ }
+ .modal-container.active{
+    display: block;
  }
  .close-btn{
    
@@ -111,8 +120,8 @@ body,html{
  .fas::after{
     content: '';
     display: block;
-    width:20px;
-    height:4px;
+    width:2.7vw;
+    height:.7vh;
     margin-top: 5px;
     background: rgb(225, 33, 29);
     transform:   translateY(-10px) rotate(-135deg);
@@ -122,15 +131,19 @@ body,html{
  .fas::before{
     content: '';
     display: block;
-    width:20px;
-    height:4px;
+    width:2.7vw;
+    height:.7vh;
     margin-top: 5px;
     background:  rgb(225, 33, 29);
     transform:  translateY(-1.5px)  rotate(135deg);
     box-shadow: 1px 1px  2px rgba(0, 0, 0, 0.432);
  }
 
- .modal-btn.open-modal .modal-container{
-   display: block;
- }
+.modal-overlay{
+    position: absolute;
+    width:100vw;
+    height:100vh;
+    top:0vh;
+    background: rgba(0, 0, 0, 0.238);
 
+}
