--- a/ex60/style.css
+++ b/ex60/style.css
@@ -56,7 +56,7 @@ body,html{
     
 }
 .banner.active{
-    background: rgb(126, 124, 124);
+    background: rgba(30, 199, 237, 0.988);
 }
 .modal-btn:hover{
     padding-top: 9px;
@@ -144,6 +144,8 @@ body,html{
     width:100vw;
     height:100vh;
     top:0vh;
-    background: rgba(0, 0, 0, 0.238);
-
+    
+}
+.modal-overlay.active{
+    background: rgba(9, 156, 197, 0.241);
 }
