--- a/ex61/style.css
+++ b/ex61/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
 *{
     margin:0;
@@ -11,25 +10,130 @@
 html,body{
     width:100vw;
     height: 100vh;
+    background: radial-gradient(rgb(211, 228, 232),rgb(248, 255, 253));
 
 }
 h2{ 
     font-family: 'Great Vibes';
     color:#CDA55F;
-    font-size: 2.8em;
+    font-size: 3em;
     font-weight: 600;
      text-align: center;
+     position: relative;
+   
      
+}
+p{
+   font-family:  Open Sans;
+   text-align: justify;
+
 }
 
 .questions{
     position: absolute;
-    display: flex;
-    width: 600px;
-    height: 400px;
-    border: 2px solid;
+    width: 800px;
+    height: 600px;
     align-items: center;
     justify-content: center;
     left:25vw;
+    top:10vh;
+    
 
+}
+.question{
+    position: relative;
+    display: block;
+    top:5vh;
+
+
+}
+.question-title{
+   display: flex;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    margin-top: 1.2rem;
+    border-radius: 5px;
+    box-shadow:  2px 1px 7px rgba(0, 0, 0, 0.439);
+    background: snow;
+    padding: 15px;
+    justify-content: space-between;
+    align-items: center;
+}
+.question-title p{
+    font-family: 'Julius Sans One', sans-serif;
+    position: relative;
+    left:2vw;
+    top:1.8vh;
+    color:black;
+   
+    
+}
+.question-text{
+    border-top: 1px solid rgb(181, 181, 181);
+    position: relative;
+    display: block;
+    line-height: 1.9rem;
+    background: snow;
+    margin: 0 15px;
+    width: 58.62vw;
+    height: 0px;
+    top:-.2vh;
+   left:-2.4vh;
+   border-radius: 0px 0px 5px 5px;
+   box-shadow:  0px 5px 10px rgba(0, 0, 0, 0.329);
+   padding: 10px;
+   transition: .6s;
+   padding-top: 15px;
+   visibility: hidden;
+   overflow-y: hidden;
+    
+
+}
+
+.question-btn{
+    border-radius: 3px;
+    border: 2px solid #ba9453;
+    display: block;
+    width:23px;
+    height: 23px;
+    transition: .5s;
+    
+   
+}
+.question-btn:hover{
+    transform:  rotate(90deg);
+    transition: .5s;
+}
+.plus-icon{
+    position: relative;
+    left:0.28vw;
+    display: block;
+    width: 13px;
+    height: 3px;
+    top: .4vh;
+    background:#ba9453;
+    transform:  rotate(90deg);
+   
+}
+.min-icon{
+    position: relative;
+    left:0.28vw;
+    display: block;
+    width: 13px;
+    height: 3px;
+    background:#ba9453;
+    margin-top: 2px;
+    top: -.4vh;
+    transition: .5s;
+
+}
+.active .min-icon{
+    opacity: 0;
+    transition: .5s;
+}
+
+.active .question-text{
+   height: 18vh;
+   visibility: visible;
+   transition: .6s ; 
 }
