--- a/ex61/style.css
+++ b/ex61/style.css
@@ -75,7 +75,7 @@ p{
     line-height: 1.9rem;
     background: snow;
     margin: 0 15px;
-    width: 58.62vw;
+    width: 800px;
     height: 0px;
     top:-.2vh;
    left:-2.4vh;
