--- a/ex66/css/estilo.css
+++ b/ex66/css/estilo.css
@@ -57,9 +57,11 @@
    
 }
 body{
-    width:100%;
-    height:100%;
     font-family: var(--ff-primary);
+    background: rgba(34, 34, 34, 0.447);
+    width:100%;
+    height: 100%;
+   
 
 }
 
@@ -77,30 +79,42 @@ h1{
     position: relative;
     text-align: center;
     margin: auto;
-    top: -50vh;
-    color:var(--clr-white)
-  
+    color:var(--clr-white);
+    top:-50vh;
+    height: 0;
+
 }
 header{
-    min-height: 105vh;
+    min-height: 100vh;
+    position: relative;
     display: grid;
-    place-items: center;
-    background: rgba(34, 34, 34, 0.447);
-   
+    align-items: center;
+    justify-content: center;
     
+        
 
     
     
   
 }
-.video-container{
+header::after{
+    content: "";
     position: absolute;
     top:0;
     left:0;
-    width:100%;
-    height:120%;
+    width: 100%;
+    height:100%;
+    background: rgba(0,0,0,0.7);
+    z-index: -1;
+    
+}
+.video-container{
+    position: absolute;
+    right:0;
+    bottom:0;
     object-fit: cover;
     z-index: -2;
+   background-position: center right;
    
 
 }
