--- a/ex66/css/estilo.css
+++ b/ex66/css/estilo.css
@@ -118,3 +118,38 @@ header::after{
    
 
 }
+.shitch-btn{
+    display: block;
+    width:150px;
+    height:40px;
+    border: none;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.415),
+   inset -3px -3px 3px rgba(0, 0, 0, 0.537);
+    border-radius: 10px;
+    background: white;
+    z-index: 2;
+    position: absolute;
+    top:90vh;
+    left:2vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+span:nth-child(1){
+    
+    background: blue;
+    color:rgb(247, 231, 231);
+    border-radius: 10px;
+    display: block;
+    width: 6vw;
+    height: 6.5vh;
+    justify-content: center;
+    align-items: center;
+
+    
+   
+}
+span{
+    pos
+}
