--- a/ex67/css/estilo.css
+++ b/ex67/css/estilo.css
@@ -55,17 +55,136 @@ body {
     line-height: 1.5;
     font-size: 0.875rem;
   }
-ul,li,a{
 
-  list-style-type: none;
-  text-decoration: none;
-}
-ul li {
-  display: flex;
-}
-header{
-  display: block;
-  justify-content: space-between;
-  align-items: center;
+  nav{
+    display: block;
+    
   
+  
+  }
+  header{
+    background: url(../srsorataro_city_moon.png) no-repeat;
+    background-size: cover;
+   min-height: 150vh;
+  }
+  .nav-header{
+    display: flex;
+    position: relative;
+    left:2rem;
+    font-family: var(--ff-primary);
+    font-size: 1.2rem;
+
+  }
+  .nav-toggle{
+    display: none;
+   
+    border: none;
+    background: var(--clr-grey-10);
+  }
+  i{
+  background: transparent;
+  }
+  .nav-center{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .links-container{
+    display: flex;
+
+  }
+  .links{
+    display: flex;
+  
+  }
+  ul, li, a{
+    list-style-type: none;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+
+  }
+  a{
+    font-size: 1.085rem;
+    font-family: var(--ff-secondary);
+    font-weight: 500;
+    color:rgb(255, 255, 255);
+  }
+
+  a:hover{
+    color:rgb(3, 59, 155);
+    background: var(--clr-white);
+    border-radius: 5px;
+    font-weight: 700;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.447);
+    text-shadow: 0px 0px 2px rgb(227, 227, 227);
+    cursor:pointer;
+    font-size: 1.15rem;
+  }
+  h1{
+    color: white;
+  }
+  #home{
+    display: block;
+    text-align: center;
+    
+  }
+  .section{
+    line-height: 9rem;
+    position: relative;
+    top:6rem;
+ 
+  }
+  h2:hover{
+   color:white;
+   font-weight: 700;
+   text-shadow: 0 2px 5px black;
+   font-size: 1.8rem;
+  }
+    
+  h2{
+    font-size: 1.5rem;
+    color:var(--clr-grey-3);
+    cursor: pointer;
+   
+
+  }
+
+  footer p{
+    display: block;
+    height: 40px;
+   
+    align-items: center;
+    text-align: center;
+    
+    
+  }
+  p{
+   position: relative;
+   top:12rem;
+   color:white;
+  }
+.scroll-link{
+  position: relative;
+  top: 10rem;
+}
+@media screen and (max-width:600px) {
+  .nav-toggle{
+    display: block;
+    position: relative;
+    left:80%;
+  
+
+  }
+  .links-container{
+    display: none;
+    
+  }
+h1{
+  font-size: 1.5rem;
+}
+.fas{
+ font-size: 1.3rem;
+
+}
 }
