--- a/ex67/css/estilo.css
+++ b/ex67/css/estilo.css
@@ -287,7 +287,7 @@ footer p {
     position: relative;
     font-size: 5rem;  
     top:-5rem;
-    left:-33vw;
+    left:-3vw;
     margin: auto;
     line-height: 2rem;
     border-bottom: 1px solid rgb(92, 91, 91);
@@ -299,7 +299,9 @@ footer p {
  
   }
   .nav-center{
-    height: 0vh;
+    background-color: #fff;
+    height: 40px;
+    width: 100%;
     transition: .5s;
     overflow:hidden;
   }
