--- a/ex67/css/estilo.css
+++ b/ex67/css/estilo.css
@@ -49,10 +49,147 @@
     box-sizing: border-box;
 }
 body {
+    
     font-family: var(--ff-secondary);
     background: var(--clr-grey-10);
     color: var(--clr-grey-1);
     line-height: 1.5;
     font-size: 0.875rem;
    
+}
+
+.nav-center{
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, rgba(188, 221, 241, 0.351), rgb(251, 255, 255));
+    height: 80px;
+    width: 100%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.305);
+
+   
+
+}
+.nav-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 20px;
+    color:#29335d;
+    font-size: 1.2rem;
+}
+ 
+
+
+.links{
+    display: flex;
+    letter-spacing: .25rem;
+    line-height: -15px;
+    align-items: center;
+}
+.links-container{
+    display: grid;
+    
+}
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+    font-size: 1.12rem;
+    color:#000;
+}
+a:hover{
+    font-size: 1.25rem;
+    font-weight: 800;
+    text-shadow: 0px 0px 5px white;
+    
+
+}
+li a{
+    padding:   0px 15px;
+}
+li:hover{
+
+    background: #49a6e9;
+    border-radius: 5px;
+    
+    
+}
+header{
+    background-attachment: fixed;
+    background-position: right,center;    background-position: right,center;
+    width: 100%;
+    height: 100%;
+    background: url(../srsorataro_city_moon.png) no-repeat;
+    background-size: cover;
+}
+.banner{
+    display: block;
+    height: 98vh;
+    
+   
+  
+
+    
+}
+.container{
+    position: relative;
+    top:50%;
+    color:white;
+    text-align: center;
+}
+.nav-toggle{
+    display: none;
+    position:absolute;
+    left:50%;
+    background: black;
+}
+.menu{
+    display: block;
+    position: absolute;
+    border-top: 2px solid;
+    width: 30px;
+}
+.menu:after, .menu:before{
+    display: block;
+    margin-top: 6px;
+    content: '';
+    height: 2px;
+    background: black;
+}
+@media (max-width:600px){
+ .links-container{
+    position: absolute;
+    height: 0;
+    overflow: hidden;
+    transition: .5s;
+    
+
+   
+ }
+ .nav-toggle{
+    position: absolute;
+    display: block;
+    border: none;
+    z-index: 999;
+    
+ }
+ .show-links{
+   
+    background: linear-gradient(to bottom, rgba(188, 221, 241, 0.351), rgba(251, 255, 255, 0.255));
+    width: 100%;
+    height: 800px;
+    transition: 5s;
+    overflow: visible;
+ }
+ .nav-center.active{
+    background: transparent;
+    box-shadow: none;
+ }
+ .links{
+    display: block;
+    position:relative;
+    top:80px;
+ }
 }
