--- a/ex67/css/estilo.css
+++ b/ex67/css/estilo.css
@@ -87,6 +87,7 @@ body {
     align-items: center;
     position: relative;
     top:25px;
+   
 }
 .links-container{
     display: block;
@@ -101,6 +102,26 @@ a{
     text-decoration: none;
     font-size: 1.12rem;
     color:#000;
+
+}
+#c1,
+#c2,
+#c3,
+#c4{
+    text-transform: capitalize;
+    border: none;
+    box-shadow: none;
+    background: none;
+}
+#c1:hover,
+#c2:hover,
+#c3:hover,
+#c4:hover{
+   background: transparent;
+   border: none;
+   padding: none;
+   border-top: none;
+   border-radius: 10px;
 }
 .links a:hover{
     font-size: 1.25rem;
@@ -111,10 +132,9 @@ a{
 }
 li a{
     padding:   0px 15px;
+    
 }
 li:hover{
-
-    background: #49a6e9;
     border-radius: 5px;
     
     
@@ -182,6 +202,7 @@ header{
 }
 .container {
     text-shadow: 0px 2px 5px black;
+
 }
 .section{
     display: flex;
@@ -252,6 +273,7 @@ footer{
     animation: bounce 2s ease-in-out infinite;
     visibility: hidden;
     z-index: -100;
+   
   }
 @media (max-width:600px){
  .links-container{
@@ -266,6 +288,7 @@ footer{
 
    
  }
+
  #about, 
  #tours,
  #services{
@@ -303,12 +326,13 @@ footer p{
     display: none;
  }
  .show-links{
-   
     background: linear-gradient(to bottom, rgba(188, 221, 241, 0.351), rgba(251, 255, 255, 0.255));
     width: 100vw;
     height: calc(800px  - 80px);
     visibility: visible;
-    overflow-y: auto;
+    overflow-y: none;
+    padding-bottom: 800px;
+    
     
  }
 .menu.active{
