--- a/ex68/css/estilo.css
+++ b/ex68/css/estilo.css
@@ -59,7 +59,12 @@ body{
 }
 .title{
     text-align: center;
+    line-height: 2;
+    padding-bottom: 1.5rem;
     
+}
+h2{
+    text-transform: capitalize;
 }
 .about-center{
     display: flex;
@@ -76,6 +81,7 @@ body{
     border-radius: 10px;
     box-shadow: 0px 0px 5px black;
 }
+
 @media screen  and (max-width:600px){
     .about-center img{
         
